--- a/attention_visual.ipynb
+++ b/attention_visual.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pathlib  import Path\n",
+    "from pathlib import Path\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "from model import Transformer\n",
@@ -18,7 +18,7 @@
     "import numpy as np\n",
     "import warnings\n",
     "\n",
-    "warnings.filterwarnings('ignore')"
+    "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
@@ -36,7 +36,7 @@
    ],
    "source": [
     "# Define the device\n",
-    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "print(f\"Using device {device}\")"
    ]
   },
@@ -67,7 +67,9 @@
    "source": [
     "config = get_config()\n",
     "train_dataloader, val_dataloader, vocab_src, vocab_tgt = get_ds(config)\n",
-    "model = get_model(config, vocab_src.get_vocab_size(), vocab_tgt.get_vocab_size()).to(device)\n",
+    "model = get_model(config, vocab_src.get_vocab_size(), vocab_tgt.get_vocab_size()).to(\n",
+    "    device\n",
+    ")\n",
     "\n",
     "# Load the pretrained weights\n",
     "model_filename = get_weights_file_path(config, f\"19\")\n",
@@ -88,10 +90,22 @@
     "    decoder_input = batch[\"decoder_input\"].to(device)\n",
     "    decoder_mask = batch[\"decoder_mask\"].to(device)\n",
     "\n",
-    "    encoder_input_tokens = [vocab_src.id_to_token(idx) for idx in encoder_input[0].cpu().numpy()]\n",
-    "    decoder_input_tokens = [vocab_tgt.id_to_token(idx) for idx in decoder_input[0].cpu().numpy()]\n",
+    "    encoder_input_tokens = [\n",
+    "        vocab_src.id_to_token(idx) for idx in encoder_input[0].cpu().numpy()\n",
+    "    ]\n",
+    "    decoder_input_tokens = [\n",
+    "        vocab_tgt.id_to_token(idx) for idx in decoder_input[0].cpu().numpy()\n",
+    "    ]\n",
     "\n",
-    "    model_out = greedy_decode(model, encoder_input, encoder_mask, vocab_src, vocab_tgt, config[\"seq_len\"], device)\n",
+    "    model_out = greedy_decode(\n",
+    "        model,\n",
+    "        encoder_input,\n",
+    "        encoder_mask,\n",
+    "        vocab_src,\n",
+    "        vocab_tgt,\n",
+    "        config[\"seq_len\"],\n",
+    "        device,\n",
+    "    )\n",
     "\n",
     "    return batch, encoder_input_tokens, decoder_input_tokens"
    ]
@@ -119,6 +133,7 @@
     "        columns=[\"row\", \"column\", \"value\", \"row_token\", \"col_token\"],\n",
     "    )\n",
     "\n",
+    "\n",
     "def get_attn_map(attn_type: str, layer: int, head: int):\n",
     "    if attn_type == \"encoder\":\n",
     "        attn = model.encoder.layers[layer].self_attention_block.attention_scores\n",
@@ -127,6 +142,7 @@
     "    elif attn_type == \"encoder-decoder\":\n",
     "        attn = model.decoder.layers[layer].cross_attention_block.attention_scores\n",
     "    return attn[0, head].data\n",
+    "\n",
     "\n",
     "def attn_map(attn_type, layer, head, row_tokens, col_tokens, max_sentence_len):\n",
     "    df = mtx2df(\n",
@@ -145,17 +161,29 @@
     "            color=\"value\",\n",
     "            tooltip=[\"row\", \"column\", \"value\", \"row_token\", \"col_token\"],\n",
     "        )\n",
-    "        #.title(f\"Layer {layer} Head {head}\")\n",
+    "        # .title(f\"Layer {layer} Head {head}\")\n",
     "        .properties(height=400, width=400, title=f\"Layer {layer} Head {head}\")\n",
     "        .interactive()\n",
     "    )\n",
     "\n",
-    "def get_all_attention_maps(attn_type: str, layers: list[int], heads: list[int], row_tokens: list, col_tokens, max_sentence_len: int):\n",
+    "\n",
+    "def get_all_attention_maps(\n",
+    "    attn_type: str,\n",
+    "    layers: list[int],\n",
+    "    heads: list[int],\n",
+    "    row_tokens: list,\n",
+    "    col_tokens,\n",
+    "    max_sentence_len: int,\n",
+    "):\n",
     "    charts = []\n",
     "    for layer in layers:\n",
     "        rowCharts = []\n",
     "        for head in heads:\n",
-    "            rowCharts.append(attn_map(attn_type, layer, head, row_tokens, col_tokens, max_sentence_len))\n",
+    "            rowCharts.append(\n",
+    "                attn_map(\n",
+    "                    attn_type, layer, head, row_tokens, col_tokens, max_sentence_len\n",
+    "                )\n",
+    "            )\n",
     "        charts.append(alt.hconcat(*rowCharts))\n",
     "    return alt.vconcat(*charts)"
    ]
@@ -178,7 +206,7 @@
     "batch, encoder_input_tokens, decoder_input_tokens = load_next_batch()\n",
     "print(f\"Source: {batch['src_text'][0]}\")\n",
     "print(f\"Target: {batch['tgt_text'][0]}\")\n",
-    "sentence_len = encoder_input_tokens.index('[PAD]')"
+    "sentence_len = encoder_input_tokens.index(\"[PAD]\")"
    ]
   },
   {
@@ -270,7 +298,14 @@
     "heads = [0, 1, 2, 3, 4, 5, 6, 7]\n",
     "\n",
     "# Encoder Self-Attention\n",
-    "get_all_attention_maps(\"encoder\", layers, heads, encoder_input_tokens, encoder_input_tokens, min(20, sentence_len))"
+    "get_all_attention_maps(\n",
+    "    \"encoder\",\n",
+    "    layers,\n",
+    "    heads,\n",
+    "    encoder_input_tokens,\n",
+    "    encoder_input_tokens,\n",
+    "    min(20, sentence_len),\n",
+    ")"
    ]
   },
   {
@@ -359,7 +394,14 @@
    ],
    "source": [
     "# Decoder Self-Attention\n",
-    "get_all_attention_maps(\"decoder\", layers, heads, decoder_input_tokens, decoder_input_tokens, min(20, sentence_len))"
+    "get_all_attention_maps(\n",
+    "    \"decoder\",\n",
+    "    layers,\n",
+    "    heads,\n",
+    "    decoder_input_tokens,\n",
+    "    decoder_input_tokens,\n",
+    "    min(20, sentence_len),\n",
+    ")"
    ]
   },
   {
@@ -448,7 +490,14 @@
    ],
    "source": [
     "# Cross Attention\n",
-    "get_all_attention_maps(\"encoder-decoder\", layers, heads, encoder_input_tokens, decoder_input_tokens, min(20, sentence_len))"
+    "get_all_attention_maps(\n",
+    "    \"encoder-decoder\",\n",
+    "    layers,\n",
+    "    heads,\n",
+    "    encoder_input_tokens,\n",
+    "    decoder_input_tokens,\n",
+    "    min(20, sentence_len),\n",
+    ")"
    ]
   },
   {
