--- a/inference.ipynb
+++ b/inference.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pathlib  import Path\n",
+    "from pathlib import Path\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "from config import get_config, get_weights_file_path\n",
@@ -24,7 +24,9 @@
     "print(f\"Using device: {device}\")\n",
     "config = get_config()\n",
     "train_dataloader, val_dataloader, tokenizer_src, tokenizer_tgt = get_ds(config)\n",
-    "model = get_model(config, tokenizer_src.get_vocab_size(), tokenizer_tgt.get_vocab_size()).to(device)\n",
+    "model = get_model(\n",
+    "    config, tokenizer_src.get_vocab_size(), tokenizer_tgt.get_vocab_size()\n",
+    ").to(device)\n",
     "\n",
     "# Load the pretrained weights\n",
     "model_filename = get_weights_file_path(config, f\"29\")\n",
@@ -38,7 +40,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run_validation(model, val_dataloader, tokenizer_src, tokenizer_tgt, config[\"seq_len\"], device, lambda msg: print(msg), 0, None, num_examples=10)"
+    "run_validation(\n",
+    "    model,\n",
+    "    val_dataloader,\n",
+    "    tokenizer_src,\n",
+    "    tokenizer_tgt,\n",
+    "    config[\"seq_len\"],\n",
+    "    device,\n",
+    "    lambda msg: print(msg),\n",
+    "    0,\n",
+    "    None,\n",
+    "    num_examples=10,\n",
+    ")"
    ]
   }
  ],
