Successfully integrated `lightning` module to load the model

--- a/inference.ipynb
+++ b/inference.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "import torch\n",
+    "import lightning as L\n",
     "import torch.nn as nn\n",
     "from config import get_config, get_weights_file_path\n",
     "from train import get_model, get_ds, run_validation"
@@ -15,23 +16,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# The Transformer Module class is used to align the weights with the model\n",
+    "class TransformerModule(L.LightningModule):\n",
+    "    def __init__(self, model):\n",
+    "        super().__init__()\n",
+    "        self.model = model\n",
+    "\n",
+    "    def forward(self, encoder_input, decoder_input, encoder_mask, decoder_mask):\n",
+    "        encoder_output = self.model.encode(encoder_input, encoder_mask)\n",
+    "        decoder_output = self.model.decode(\n",
+    "            encoder_output, encoder_mask, decoder_input, decoder_mask\n",
+    "        )\n",
+    "        proj_output = self.model.project(decoder_output)\n",
+    "        return proj_output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using device: cuda\n",
+      "Max length of source sentence: 309\n",
+      "Max length of target sentence: 274\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/teamspace/studios/this_studio/model.py:679: UserWarning: nn.init.xavier_uniform is now deprecated in favor of nn.init.xavier_uniform_.\n",
+      "  init.xavier_uniform(parameter)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Define the device\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "print(f\"Using device: {device}\")\n",
     "config = get_config()\n",
     "train_dataloader, val_dataloader, tokenizer_src, tokenizer_tgt = get_ds(config)\n",
-    "model = get_model(\n",
+    "og_model = get_model(\n",
     "    config, tokenizer_src.get_vocab_size(), tokenizer_tgt.get_vocab_size()\n",
-    ").to(device)\n",
+    ")\n",
+    "lightning_mod = TransformerModule(og_model)\n",
     "\n",
     "# Load the pretrained weights\n",
-    "model_filename = get_weights_file_path(config, f\"29\")\n",
+    "model_filename = get_weights_file_path(config, f\"final\")\n",
     "state = torch.load(model_filename)\n",
-    "model.load_state_dict(state[\"model_state_dict\"])"
+    "lightning_mod.load_state_dict(state)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--------------------------------------------------------------------------------\n",
+      "SOURCE: What aim, what purpose, what ambition in life have you now?\"\n",
+      "TARGET: Insomma, qual'è lo scopo della vostra vita?\n",
+      "PREDICTED: , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , ,\n",
+      "--------------------------------------------------------------------------------\n",
+      "SOURCE: \"Get up, you fat-headed chunk!\" roared Harris. \"It's quarter to ten.\"\n",
+      "TARGET: — Alzati, dormiglione! — ruggì Harris. — Sono le dieci meno un quarto.\n",
+      "PREDICTED: , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , ,\n",
+      "--------------------------------------------------------------------------------\n",
+      "SOURCE: This would trouble and irritate some people; the sublime equanimity of the hired boatman under the ordeal affords us a beautiful lesson against ambition and uppishness.\n",
+      "TARGET: Questo turberebbe e irriterebbe molti altri; la sublime equanimità in simili cimenti del barcaiolo a nolo ci dà una magnifica lezione contro l’ambizione e l’alterigia.\n",
+      "PREDICTED: , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , ,\n",
+      "--------------------------------------------------------------------------------\n",
+      "SOURCE: September 30, 1659.—I, poor miserable Robinson Crusoe, being shipwrecked during a dreadful storm in the offing, came on shore on this dismal, unfortunate island, which I called “The Island of Despair”; all the rest of the ship’s company being drowned, and myself almost dead.\n",
+      "TARGET: Io povero miserabile Robinson Crusoe naufragato, durante una spaventosa burrasca, dall’impeto delle onde fui gettato a terra in una orribile e sfortunata isola che chiamai l’Isola della disperazione. Gli altri miei compagni del vascello rimasero annegati, io poco meno che morto.\n",
+      "PREDICTED: , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , ,\n",
+      "--------------------------------------------------------------------------------\n",
+      "SOURCE: Petritsky in his great coat, and Captain Kamerovsky in full uniform probably straight from parade, sat on each side of her.\n",
+      "TARGET: Petrickij in cappotto e il capitano di cavalleria Kamerovskij in uniforme completa, reduci probabilmente dal servizio, sedevano vicino a lei.\n",
+      "PREDICTED: , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , , ,\n"
+     ]
+    }
+   ],
+   "source": [
+    "run_validation(\n",
+    "    lightning_mod,\n",
+    "    val_dataloader,\n",
+    "    tokenizer_src,\n",
+    "    tokenizer_tgt,\n",
+    "    config[\"seq_len\"],\n",
+    "    device,\n",
+    "    None,\n",
+    "    num_examples=5,\n",
+    ")"
    ]
   },
   {
@@ -39,20 +135,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "run_validation(\n",
-    "    model,\n",
-    "    val_dataloader,\n",
-    "    tokenizer_src,\n",
-    "    tokenizer_tgt,\n",
-    "    config[\"seq_len\"],\n",
-    "    device,\n",
-    "    lambda msg: print(msg),\n",
-    "    0,\n",
-    "    None,\n",
-    "    num_examples=10,\n",
-    ")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -62,7 +145,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.10"
   }
  },
